plugins {
    id "java"
    id "application"
    id "com.github.johnrengelman.shadow" version "7.1.2"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    jcenter()
    
    maven { 
        url "https://jitpack.io"
    }
    
    maven { 
        url "https://m2.duncte123.dev/releases"
    }
}

dependencies {
    implementation group: "com.google.guava", name: "guava", version: "33.0.0-jre"
    implementation group: "com.google.code.gson", name: "gson", version: "2.10.1"
    implementation group: "org.reflections", name: "reflections", version: "0.10.2"
    
    implementation group: "commons-io", name: "commons-io", version: "2.15.1"
    implementation group: "org.apache.commons", name: "commons-lang3", version: "3.14.0"
    implementation group: "org.apache.commons", name: "commons-text", version: "1.11.0"
    implementation group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
    implementation group: "commons-validator", name: "commons-validator", version: "1.8.0"
    
    implementation group: "org.eclipse.mylyn.github", name: "org.eclipse.egit.github.core", version: '3.4.0.201406110918-r'
    implementation group: "org.eclipse.jgit", name: "org.eclipse.jgit", version: '6.8.0.202311291450-r'
    
    implementation group: "org.mongodb", name: "mongodb-driver-sync", version: "4.11.1"
    implementation group: "org.mongodb.morphia", name: "morphia", version: "1.3.2"
    implementation group: "io.github.cdimascio", name: "dotenv-java", version: "3.0.0"
    implementation group: "org.spongepowered", name: "configurate-hocon", version: "4.1.2"
    
    implementation group: "ch.qos.logback", name: "logback-classic", version: "1.4.14"
    
    implementation group: "com.vdurmont", name: "emoji-java", version: "5.1.1"
    implementation group: "net.dean.jraw", name: "JRAW", version: "1.1.0"
    implementation group: "org.jsoup", name: "jsoup", version: "1.17.2"
    implementation group: "com.github.scribejava", name: "scribejava-apis", version: "8.3.3"
    implementation group: "com.github.LowLevelSubmarine", name: "GeniusLyricsAPI", version: "1.0.3"
    implementation group: 'com.github.oshi', name: 'oshi-core', version: '6.4.10'
    implementation group: 'io.github.matyrobbrt', name: 'curseforgeapi', version: '1.7.8'
    implementation group: 'net.bramp.ffmpeg', name: 'ffmpeg', version: '0.8.0'
    implementation group: 'io.github.fastily', name: 'jwiki', version: '1.11.0'
    
    implementation group: "org.jfree", name: "jfreechart", version: "1.5.4"
    implementation group: "com.jhlabs", name: "filters", version: "2.0.235-1"
    implementation group: "com.object-refinery", name: "orsoncharts", version: "1.7" 

    implementation group: "net.sourceforge.argparse4j", name: "argparse4j", version: "0.9.0"
    
    implementation group: "net.dv8tion", name: "JDA", version: "5.0.0-beta.19"
    implementation group: "dev.arbjerg", name: "lavaplayer", version: "2.0.4"
    implementation group: "com.github.natanbc", name: "lavadsp", version: "0.7.7"
    implementation group: "com.dunctebot", name: "sourcemanagers", version: "1.9.0"
    implementation group: "com.github.TopiSenpai.LavaSrc", name: "lavasrc", version: "4.0.1"
    implementation("com.sedmelluq:jda-nas:1.1.0") {
        exclude module: "udp-queue"
    }
    implementation("club.minnced:udpqueue-native-linux-x86-64:0.2.7")
    implementation("club.minnced:udpqueue-native-win-x86-64:0.2.7")

    implementation group: 'com.github.twitch4j', name: 'twitch4j', version: '1.18.0'
    implementation group: 'com.github.philippheuer.events4j', name: 'events4j-handler-reactor', version: '0.12.1'
    implementation group: 'com.lukaspradel', name: 'steam-web-api', version: '1.7.0'
    implementation group: 'com.apptasticsoftware', name: 'rssreader', version: '3.5.0'
    implementation group: 'com.twitter', name: 'twitter-api-java-sdk', version: '2.0.3'
    implementation group: 'io.javalin', name: 'javalin', version: '5.6.3'

    annotationProcessor group: "org.projectlombok", name: "lombok", version: "1.18.30"
    compileOnly group: "org.projectlombok", name: "lombok", version: "1.18.30"
}

application {
    mainClass = "dev.darealturtywurty.superturtybot.TurtyBot"
}

jar {
    manifest {
        attributes(
            "Implementation-Title": "SuperTurtyBot",
            "Implementation-Version": "1.0-alpha",
            "Main-Class": "dev.darealturtywurty.superturtybot.TurtyBot"
        )
    }
}

shadowJar {
    zip64 true
    
    mergeServiceFiles()
}

compileJava.options.encoding = "UTF-8"

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}
